# rusqlite

./: .gitignore  Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  lib.rs  types.rs
crates/core/src/btree/: mod.rs
crates/core/src/pager/: mod.rs
crates/core/src/storage/: mod.rs
rusqlite/src/: main.rs
