[workspace]
members = ["crates/core", "crates/cli"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["contact@emaaad.com", "asghari.ali10@gmail.com"]
description = "A SQLite implementation in rust"
license = "MIT"

[workspace.dependencies]
thiserror = "2.0.11"
anyhow = "1.0.95"
clap = "4.5.27"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossbeam = "0.8"       # Concurrency (optional)
parking_lot = "0.12"    # Efficient locks
